# webds_data_collection

./: .gitignore  .prettierignore  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
src/: icons.ts  index.ts  local_exports.ts  testrail_logo.tsx  widget_container.tsx  widget_landing.tsx
src/widget/: DataCollectionComponent.tsx  DataCollectionWidget.tsx  Landing.tsx  Playback.tsx  PlaybackPlot.tsx  TestRailLogo.tsx  constants.tsx  local_exports.tsx
